refactor algorithm, docs, tests
