# application/entities/entitites.go
@@ -1,6 +1,0 @@
-package entities
-
-type WithdrawalStatement struct {
-	RequestedAmount int         `json:"requestedAmount"`
-	UsedBankNotes   map[int]int `json:"usedBankNotes"`
-}
