# docs/swagger.json
@@ -28,7 +28,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controller.WithdrawalRequest"
+                            "$ref": "#/definitions/application.WithdrawalRequest"
                         }
                     }
                 ],
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.WithdrawalStatement"
+                            "$ref": "#/definitions/application.WithdrawalStatement"
                         }
                     },
                     "400": {
@@ -50,7 +50,7 @@
         }
     },
     "definitions": {
-        "controller.WithdrawalRequest": {
+        "application.WithdrawalRequest": {
             "type": "object",
             "required": [
                 "amount"
@@ -61,7 +61,7 @@
                 }
             }
         },
-        "entities.WithdrawalStatement": {
+        "application.WithdrawalStatement": {
             "type": "object",
             "properties": {
                 "requestedAmount": {
